--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ejs-challenge",
+  "name": "MaiThai_Blog",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --recursive test",
-    "server": "http-server src"
+    "test-init": "~/node_modules/jasmine/bin/jasmine.js init",
+    "test": "~/node_modules/jasmine/bin/jasmine.js"
   },
   "author": "Mai Eaksen",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "http-server": "^0.11.1",
+    "jasmine": "^3.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.20",
     "puppeteer": "^1.14.0",
@@ -21,6 +22,7 @@
   },
   "description": "Mai_Thai Kitchen Blog Application",
   "devDependencies": {
+    "jasmine-core": "file:jasmine",
     "mocha": "^6.1.2"
   }
 }
